[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/1-1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Protagonist.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Game_Camera.gd" type="Script" id=4]
[ext_resource path="res://Audio/JumpMan.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Game.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10000, 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 10 )
protagonist_scene = ExtResource( 2 )
levels = [ ExtResource( 1 ) ]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.705
autoplay = true

[node name="Game_Camera" type="Camera2D" parent="." groups=["camera"]]
position = Vector2( 64, 104 )
current = true
zoom = Vector2( 0.232, 0.232 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
follow_distance = 20

[node name="StaticBody2D" type="StaticBody2D" parent="Game_Camera"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_Camera/StaticBody2D"]
position = Vector2( -188, 0 )
shape = SubResource( 1 )

[node name="Time" type="Label" parent="Game_Camera"]
margin_left = 104.0
margin_top = -104.0
margin_right = 176.0
margin_bottom = -90.0
text = "Time: 0"

[node name="Lives" type="Label" parent="Game_Camera"]
margin_left = -40.0
margin_top = -104.0
margin_right = 32.0
margin_bottom = -90.0
text = "Lives: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Game_Camera"]
margin_left = -184.0
margin_top = -104.0
margin_right = -112.0
margin_bottom = -90.0
text = "Score: 0"

[node name="Sweep" type="Area2D" parent="Game_Camera"]
position = Vector2( 8, 120 )
collision_layer = 0
collision_mask = 14
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_Camera/Sweep"]
shape = SubResource( 2 )

[node name="Sweep2" type="Area2D" parent="Game_Camera"]
position = Vector2( 8, 136 )
collision_layer = 0
collision_mask = 14
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_Camera/Sweep2"]
shape = SubResource( 2 )

[node name="Timer_Time" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Player_Spawn" type="Position2D" parent="."]
position = Vector2( 72, 176 )

[connection signal="body_entered" from="Game_Camera/Sweep" to="." method="_on_Sweep_body_entered"]
[connection signal="body_entered" from="Game_Camera/Sweep2" to="." method="_on_Sweep_body_entered"]
[connection signal="timeout" from="Timer_Time" to="." method="_on_Timer_Time_timeout"]
